--- a/index.html
+++ b/index.html
@@ -743,7 +743,24 @@
 
         <!--==================== PROJECT IN MIND ====================-->
         <section class="project section">
+            <div class="project__bg">
+                <div class="project__container container grid">
+                    <div class="project__data">
+                        <h2 class="project__title">You have a new project</h2>
+                        <p class="project__description">
+                            I am always open to new projects and collaborations. If you have an idea or a project in mind,
+                            feel free to reach out to me. Let's work together to bring your vision to life!
+                        </p>
 
+                        <a href="#contact" class="button button--flex button--white">
+                            Contact me 
+                            <i class="uil uil-message project__icon button__icon"></i>
+                        </a>
+                    </div>
+
+                    <img src="assets/img/project.png" alt="" class="project__img">
+                </div>
+            </div>
         </section>
 
         <!--==================== TESTIMONIAL ====================-->
