changing the layout a bit, test it to see if it looks good in all screens

--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
                              não hesite em entrar em contato comigo. Vamos trabalhar juntos para dar vida à sua visão!
                         </p>
 
-                        <a href="#contact" class="button button--flex button--white">
+                        <a href="#contact" class="button button__contact button--flex button--white">
                             Contate-me
                             <i class="uil uil-message project__icon button__icon"></i>
                         </a>
