adding language option in header and changing all text from services to portuguese

--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
                             <i class="uil uil-message nav__icon"></i> Contato
                         </a>
                     </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">
+                            <i class="uil uil-language nav__icon"></i> Language
+                        </a>
+                    </li>
                 </ul>
 
                 <i class="uil uil-times nav__close" id="nav-close"></i>
@@ -175,7 +180,7 @@
         <!--==================== SKILLS ====================-->
         <section class="skills section" id="skills">
             <h2 class="section__title">Habilidades</h2>
-            <span class="section__subtitle">Minha habilidade técnica <br> 0%/40% = Basico | 41%/70% = Intermediario | 71%/100% = Avançado</span>
+            <span class="section__subtitle">Minha habilidade técnica <br><br> 0%/40% = Básico <br> 41%/70% = Intermediario <br> 71%/100% = Avançado</span>
 
             <div class="skills__container container grid">
                 <!--==================== SKILLS 1 ====================-->
@@ -448,32 +453,28 @@
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
                                     <p>
-                                        I develop user interfaces that are both functional and aesthetically pleasing,
-                                        ensuring a seamless user experience.
+                                        Desenvolvo interfaces funcionais e visualmente agradáveis, sempre pensando na experiência do usuário.
                                     </p>
                                 </li>
 
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
                                     <p>
-                                        I create user-centered designs that enhance usability and accessibility,
-                                        making products more intuitive.
+                                        Crio layouts responsivos e intuitivos usando Flutter para mobile, e HTML, CSS e JavaScript para web.
                                     </p>
                                 </li>
 
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
                                     <p>
-                                        I conduct user research and usability testing to inform design decisions,
-                                        ensuring that the final product meets user needs.
+                                        Me preocupo com a organização do código e a fidelidade ao design, garantindo facilidade de manutenção.
                                     </p>
                                 </li>
 
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
                                     <p>
-                                        I collaborate with developers to ensure that designs are implemented correctly,
-                                        maintaining design integrity throughout the development process.
+                                        Busco equilibrar estética e usabilidade, criando interfaces que sejam bonitas e práticas ao mesmo tempo.
                                     </p>
                                 </li>
                             </ul>
@@ -503,32 +504,28 @@
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
                                     <p>
-                                        I develop user interfaces that are both functional and aesthetically pleasing,
-                                        ensuring a seamless user experience.
+                                        Tenho experiência com autenticação, segurança de dados e validação de informações em sistemas web e mobile.
                                     </p>
                                 </li>
 
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
                                     <p>
-                                        I create user-centered designs that enhance usability and accessibility,
-                                        making products more intuitive.
+                                        Trabalho com bancos de dados relacionais como PostgreSQL e MySQL, sempre focando em estrutura limpa e consultas eficientes.
                                     </p>
                                 </li>
 
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
                                     <p>
-                                        I conduct user research and usability testing to inform design decisions,
-                                        ensuring that the final product meets user needs.
+                                        Integro APIs de terceiros como Mercado Pago, Stripe e RevenueCat, utilizando webhooks para garantir comunicação em tempo real.
                                     </p>
                                 </li>
 
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
                                     <p>
-                                        I collaborate with developers to ensure that designs are implemented correctly,
-                                        maintaining design integrity throughout the development process.
+                                        Estruturo o back-end pensando em escalabilidade e manutenção, com código limpo e bem dividido.
                                     </p>
                                 </li>
                             </ul>
@@ -558,32 +555,35 @@
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
                                     <p>
-                                        I develop user interfaces that are both functional and aesthetically pleasing,
-                                        ensuring a seamless user experience.
+                                        Realizo a configuração de servidores Linux para hospedagem de aplicações web, com foco em estabilidade e segurança.
                                     </p>
                                 </li>
 
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
                                     <p>
-                                        I create user-centered designs that enhance usability and accessibility,
-                                        making products more intuitive.
+                                        Tenho experiência com servidores web como Nginx e Apache, além de configurar HTTPS com Certbot e Let's Encrypt.
                                     </p>
                                 </li>
 
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
                                     <p>
-                                        I conduct user research and usability testing to inform design decisions,
-                                        ensuring that the final product meets user needs.
+                                        Faço deploys em nuvem com Amazon EC2, incluindo gerenciamento de acesso, firewall e otimização do ambiente.
                                     </p>
                                 </li>
 
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
                                     <p>
-                                        I collaborate with developers to ensure that designs are implemented correctly,
-                                        maintaining design integrity throughout the development process.
+                                        Instalo e configuro sistemas como ERPs, CRMs, bancos de dados em ambiente Linux. Já tive experiencia com asterisk.
+                                    </p>
+                                </li>
+
+                                <li class="services__modal-service">
+                                    <i class="uil uil-check-circle services__modal-icon"></i>
+                                    <p>
+                                        Crio ambientes de teste com VirtualBox e VMs, facilitando desenvolvimento, backup e replicação de sistemas.
                                     </p>
                                 </li>
                             </ul>
@@ -603,13 +603,13 @@
                     <!--==================== PORTFOLIO 1 ====================-->
 
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/portfolio1.jpg" alt="" class="portfolio__img">
+                        <img src="assets/img/manga-website.jpg" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">Modern Website</h3>
-                            <p class="portfolio__description">A e-commerce manga store</p>
-                            <a href="#" class="button button--flex button--small portfolio__button">
-                                Teste
+                            <h3 class="portfolio__title">Honkai</h3>
+                            <p class="portfolio__description">Uma lojá de mangás online</p>
+                            <a href="https://www.youtube.com/watch?v=NyWJ-f_ht8A" target="_blank" class="button button--flex button--small portfolio__button">
+                                Video
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
                         </div>
@@ -683,7 +683,7 @@
 
         <!--==================== CONTACT ME ====================-->
         <section class="contact section" id="contact">
-            <h2 class="section__title">Contate-me</h2>
+            <h2 class="section__title">Contato</h2>
             <span class="section__subtitle">Entre em Contato</span>
 
             <div class="contact__container container grid">
@@ -692,7 +692,7 @@
                         <i class="uil uil-phone contact__icon"></i>
 
                         <div>
-                            <h3 class="contact__title">Call me</h3>
+                            <h3 class="contact__title">Celular</h3>
                             <span class="contact__subtitle">(+55)11 95419-5131</span>
                         </div>
                     </div>
@@ -710,7 +710,7 @@
                         <i class="uil uil-map-marker contact__icon"></i>
 
                         <div>
-                            <h3 class="contact__title">Location</h3>
+                            <h3 class="contact__title">Localização</h3>
                             <span class="contact__subtitle">Brazil</span>
                         </div>
                     </div>
