--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     </div>
 
                     <div class="about__buttons">
-                        <a download="" href="assets/pdf/Alexa-Cv.pdf" class="button button--flex">
+                        <a download="" href="#" class="button button--flex">
                             Baixar Curriculo <i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
@@ -200,7 +200,7 @@
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">Inglês</h3>
-                                    <span class="skills__number">90%</span>
+                                    <span class="skills__number">92%</span>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__ingles"> </span>
@@ -209,7 +209,7 @@
 
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">Japônes</h3>
+                                    <h3 class="skills__name">Japonês</h3>
                                     <span class="skills__number">65%</span>
                                 </div>
                                 <div class="skills__bar">
@@ -219,7 +219,7 @@
 
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">Portugues - Brasileiro</h3>
+                                    <h3 class="skills__name">Português - Brasileiro</h3>
                                     <span class="skills__number">80%</span>
                                 </div>
                                 <div class="skills__bar">
@@ -331,6 +331,16 @@
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__css"> </span>
+                                    </div>
+                                </div>
+
+                                <div class="skills__data">
+                                    <div class="skills__titles">
+                                        <h3 class="skills__name">Flutter</h3>
+                                        <span class="skills__number">55%</span>
+                                    </div>
+                                    <div class="skills__bar">
+                                        <span class="skills__percentage skills__flutter"> </span>
                                     </div>
                                 </div>
                             </div>
@@ -607,7 +617,7 @@
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Honkai</h3>
-                            <p class="portfolio__description">Uma lojá de mangás online</p>
+                            <p class="portfolio__description">Uma lojá de mangás online criado como meu tcc para a faculdade. <br> PHP | MySql | Webhook | Js | Css | API</p>
                             <a href="https://www.youtube.com/watch?v=NyWJ-f_ht8A" target="_blank" class="button button--flex button--small portfolio__button">
                                 Video
                                 <i class="uil uil-arrow-right button__icon"></i>
@@ -618,13 +628,13 @@
                     <!--==================== PORTFOLIO 2 ====================-->
 
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/portfolio2.jpg" alt="" class="portfolio__img">
+                        <img src="assets/img/asp.png" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">Brand Design</h3>
-                            <p class="portfolio__description">A e-commerce manga store</p>
-                            <a href="#" class="button button--flex button--small portfolio__button">
-                                Teste
+                            <h3 class="portfolio__title">MyTask</h3>
+                            <p class="portfolio__description">Um bloco de notas online criado como AAP para a faculdade. <br> ASP.NET | HTML | Access | Css | API</p>
+                            <a href="https://www.youtube.com/watch?v=klJD9SUSXYg" target="_blank" class="button button--flex button--small portfolio__button">
+                                Video
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
                         </div>
@@ -633,13 +643,13 @@
                     <!--==================== PORTFOLIO 3 ====================-->
 
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/portfolio3.jpg" alt="" class="portfolio__img">
+                        <img src="assets/img/talk.jpg" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">Online Store</h3>
-                            <p class="portfolio__description">A e-commerce manga store</p>
-                            <a href="#" class="button button--flex button--small portfolio__button">
-                                Teste
+                            <h3 class="portfolio__title">Talkie-In</h3>
+                            <p class="portfolio__description">Projeto que ajudei no desenvolvimento durante estágio. <br> Flutter | Asterisk | Websocket | PostgreSql | API</p>
+                            <a download="" href="assets/pdf/manual de Instruções v1.2.pdf" class="button button--flex button--small portfolio__button">
+                                Baixar
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
                         </div>
