fixing no icons appearing

--- a/index.html
+++ b/index.html
@@ -26,38 +26,38 @@
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list grid">
                     <li class="nav__item">
-                        <a href="#home" class="nav__link active-link" data-i18n="frontEnd.header1">
-                            <i class="uil uil-estate nav__icon"></i> Home
+                        <a href="#home" class="nav__link active-link">
+                            <i class="uil uil-estate nav__icon"></i> <span data-i18n="frontEnd.header1">Home</span>
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a href="#about" class="nav__link" data-i18n="frontEnd.header2">
-                            <i class="uil uil-user nav__icon"></i> Sobre
+                        <a href="#about" class="nav__link" >
+                            <i class="uil uil-user nav__icon"></i> <span data-i18n="frontEnd.header2">Sobre</span>
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a href="#skills" class="nav__link" data-i18n="frontEnd.header3">
-                            <i class="uil uil-file-alt nav__icon"></i> Habilidades
+                        <a href="#skills" class="nav__link" >
+                            <i class="uil uil-file-alt nav__icon"></i> <span data-i18n="frontEnd.header3">Habilidades</span>
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a href="#services" class="nav__link" data-i18n="frontEnd.header4">
-                            <i class="uil uil-briefcase-alt nav__icon"></i> Serviços
+                        <a href="#services" class="nav__link" >
+                            <i class="uil uil-briefcase-alt nav__icon"></i> <span data-i18n="frontEnd.header4">Serviços</span>
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a href="#portfolio" class="nav__link" data-i18n="frontEnd.header5">
-                            <i class="uil uil-scenery nav__icon"></i> Portifolio
+                        <a href="#portfolio" class="nav__link" >
+                            <i class="uil uil-scenery nav__icon"></i> <span data-i18n="frontEnd.header5">Portifólio</span>
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a href="#contact" class="nav__link" data-i18n="frontEnd.header6">
-                            <i class="uil uil-message nav__icon"></i> Contato
+                        <a href="#contact" class="nav__link" >
+                            <i class="uil uil-message nav__icon"></i> <span data-i18n="frontEnd.header6">Contato</span>
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a href="#" class="nav__link change__language" data-i18n="frontEnd.header7">
-                            <i class="uil uil-language nav__icon"></i> Language
+                        <a href="#" class="nav__link change__language" >
+                            <i class="uil uil-language nav__icon"></i> <span data-i18n="frontEnd.header7">Idioma</span>
                         </a>
                     </li>
                 </ul>
@@ -124,8 +124,8 @@
                             Já trabalhei com Flutter, Node.js, PHP, PostgreSQL e integrações como Mercado Pago,
                             RevenueCat e Stripe.
                             Tenho familiaridade com Linux, Nginx, e deploys em nuvem como o Amazon EC2.</p>
-                        <a href="#contact" class="button button--flex" data-i18n="contact">
-                            Entre em Contato <i class="uil uil-message nav__icon button__icon"></i>
+                        <a href="#contact" class="button button--flex">
+                            <span data-i18n="contact">Contato</span> <i class="uil uil-message nav__icon button__icon"></i>
                         </a>
                     </div>
                 </div>
@@ -175,8 +175,8 @@
                     </div>
 
                     <div class="about__buttons">
-                        <a download="" href="#" class="button button--flex" data-i18n="about.download">
-                            Baixar Curriculo <i class="uil uil-download-alt button__icon"></i>
+                        <a download="" href="#" class="button button--flex">
+                            <span data-i18n="about.download">Baixar Curriculo</span> <i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
                 </div>
@@ -364,16 +364,14 @@
 
             <div class="qualification__container container">
                 <div class="qualification__tabs">
-                    <div class="qualification__button button--flex qualification__active" data-target="#education"
-                        data-i18n="qualification.button1">
+                    <div class="qualification__button button--flex qualification__active" data-target="#education">
                         <i class="uil uil-graduation-cap qualification__icon"></i>
-                        Educação
+                        <span data-i18n="qualification.button1">Educação</span>
                     </div>
 
-                    <div class="qualification__button button--flex" data-target="#work"
-                        data-i18n="qualification.button2">
+                    <div class="qualification__button button--flex" data-target="#work">
                         <i class="uil uil-briefcase-alt qualification__icon"></i>
-                        Trabalho
+                        <span data-i18n="qualification.button2">Trabalho</span>
                     </div>
 
                 </div>
@@ -684,9 +682,8 @@
                                 online criado como meu tcc para a faculdade. <br> PHP | MySql | Webhook | Js | Css | API
                             </p>
                             <a href="https://www.youtube.com/watch?v=NyWJ-f_ht8A" target="_blank"
-                                class="button button--flex button--small portfolio__button"
-                                data-i18n="portfolio.button1">
-                                Video
+                                class="button button--flex button--small portfolio__button">
+                                <span data-i18n="portfolio.button1">Video</span>
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
                         </div>
@@ -702,9 +699,8 @@
                             <p class="portfolio__description" data-i18n="portfolio.description2">Um bloco de notas
                                 online criado como AAP para a faculdade. <br> ASP.NET | HTML | Access | Css | API</p>
                             <a href="https://www.youtube.com/watch?v=klJD9SUSXYg" target="_blank"
-                                class="button button--flex button--small portfolio__button"
-                                data-i18n="portfolio.button2">
-                                Video
+                                class="button button--flex button--small portfolio__button">
+                                <span data-i18n="portfolio.button2">Video</span>
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
                         </div>
@@ -721,9 +717,8 @@
                                 desenvolvimento durante estágio. <br> Flutter | Asterisk | Websocket | PostgreSql | API
                             </p>
                             <a download="" href="assets/pdf/manual de Instruções v1.2.pdf"
-                                class="button button--flex button--small portfolio__button"
-                                data-i18n="portfolio.button3">
-                                Baixar
+                                class="button button--flex button--small portfolio__button">
+                                <span data-i18n="portfolio.button3">Baixar</span>
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
                         </div>
@@ -755,9 +750,8 @@
                             não hesite em entrar em contato comigo. Vamos trabalhar juntos para dar vida à sua visão!
                         </p>
 
-                        <a href="#contact" class="button button__contact button--flex button--white"
-                            data-i18n="future.button">
-                            Contate-me
+                        <a href="#contact" class="button button__contact button--flex button--white">
+                            <span data-i18n="future.button">Contate-me</span>
                             <i class="uil uil-message project__icon button__icon"></i>
                         </a>
                     </div>
@@ -797,7 +791,7 @@
 
                     <div>
                         <h3 class="contact__title" data-i18n="contact.title3">Localização</h3>
-                        <span class="contact__subtitle" data-i18n="contact.subtitle3">Brazil</span>
+                        <span class="contact__subtitle" data-i18n="contact.subtitle3">Brasil</span>
                     </div>
                 </div>
 
