sixing some text && adding new project

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     </div>
 
                     <div class="about__buttons">
-                        <a download="" href="#" class="button button--flex">
+                        <a href="#" class="button button--flex">
                             <span data-i18n="about.download">Baixar Curriculo</span> <i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
@@ -723,6 +723,22 @@
                             </a>
                         </div>
                     </div>
+
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="assets/img/fatecano.png" alt="" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title" data-i18n="portfolio.title4">Fatecanos por um dia</h3>
+                            <p class="portfolio__description" data-i18n="portfolio.description4">Projeto desenvolvoido pelo pedido de um professor da Fatec de Itaquaquecetuba
+                                 <br> Html | Css | NodeJs | access | API 
+                            </p>
+                            <a href="https://github.com/Rafaellutaro/Fatecano?tab=readme-ov-file" target="_blank"
+                                class="button button--flex button--small portfolio__button">
+                                <span data-i18n="portfolio.button4">GitHub</span>
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- Add swiper arrows -->
@@ -870,8 +886,8 @@
                 </div>
             </div>
 
-            <p class="footer__copy" data-i18n="footer.source">&#169;
-                Source code: <a href="https://github.com/bedimcode/responsive-portfolio-website-Alexa"
+            <p class="footer__copy">&#169;
+                <span data-i18n="footer.source">Source code:</span> <a href="https://github.com/bedimcode/responsive-portfolio-website-Alexa"
                     class="footer__link" target="_blank"> bedimcode</a>
             </p>
         </div>
