--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     </div>
 
                     <div class="about__buttons">
-                        <a href="#" class="button button--flex">
+                        <a download="" href="./assets/pdf/curriculo.pdf" class="button button--flex">
                             <span data-i18n="about.download">Baixar Curriculo</span> <i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
