--- a/index.html
+++ b/index.html
@@ -458,19 +458,19 @@
 
                     <li>
                         <button class="language__modal-service" onclick="changeLanguage('pt-br')">
-                            Português - Brasileiro
+                            <span data-i18n="language__pt-br">Português - Brasileiro</span>
                         </button>
                     </li>
 
                     <li>
                         <button class="language__modal-service" onclick="changeLanguage('ja')">
-                            Japonês
+                            <span data-i18n="language__ja">Japonês</span>
                         </button>
                     </li>
 
                     <li>
                         <button class="language__modal-service" onclick="changeLanguage('en')">
-                            Inglês
+                            <span data-i18n="language__en">Inglês</span>
                         </button>
                     </li>
 
@@ -871,15 +871,15 @@
 
                 <div class="footer__socials">
 
-                    <a href="#" target="_blank" class="footer__social">
+                    <a href="#" class="footer__social">
                         <i class="uil uil-facebook-f"></i>
                     </a>
 
-                    <a href="#" target="_blank" class="footer__social">
+                    <a href="#" class="footer__social">
                         <i class="uil uil-instagram"></i>
                     </a>
 
-                    <a href="#" target="_blank" class="footer__social">
+                    <a href="#" class="footer__social">
                         <i class="uil uil-twitter-alt"></i>
                     </a>
 
