adding updated files and modifying skills

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     </div>
 
                     <div class="about__buttons">
-                        <a id="downloadLink" download="" href="./assets/pdf/curriculo.pdf" class="button button--flex">
+                        <a id="downloadLink" download="" href="./assets/pdf/Rafael dos Santos Alves Pires - Dev FullStack.pdf" class="button button--flex">
                             <span data-i18n="about.download">Baixar Curriculo</span> <i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
@@ -301,7 +301,7 @@
                                 <div class="skills__data">
                                     <div class="skills__titles">
                                         <h3 class="skills__name" data-i18n="skill.name2.4">TypeScript</h3>
-                                        <span class="skills__number"  data-i18n="ts.level">Basico</span>
+                                        <span class="skills__number"  data-i18n="ts.level">Intermediario</span>
                                     </div>
                                     <hr>
                                     <!-- <div class="skills__bar">
@@ -375,7 +375,7 @@
                                 <div class="skills__data">
                                     <div class="skills__titles">
                                         <h3 class="skills__name" data-i18n="skill.name3.4">React</h3>
-                                        <span class="skills__number"  data-i18n="react.level">Basico</span>
+                                        <span class="skills__number"  data-i18n="react.level">Intermediario</span>
                                     </div>
                                     <hr>
                                 </div>
